
plugins {
	id 'java'
	id 'maven'
	id 'idea'
	//id "org.akhikhl.gretty" version "1.4.0" // TODO: make this work
}
group = 'org.landcare'

description = "Convenient way to transform curl command lines to Java."

sourceCompatibility = 1.8
targetCompatibility = 1.8


repositories {
    maven { url "http://download.osgeo.org/webdav/geotools/" }
    maven { url "http://lists.refractions.net/m2" }
    maven { url "http://mvnrepository.com/artifact" }
    maven { url "http://maven.geo-solutions.it/" }
    maven { url "http://repo.opengeo.org/" }
    maven { url "https://repository.jboss.org/nexus/content/groups/public/" }
    maven { url "http://repo1.maven.org/maven2/" }
    maven { url "http://repo.maven.apache.org/maven2" }
}
dependencies {
	compile fileTree(dir: 'lib', include: '*.jar')

    compile(group: 'log4j', name: 'log4j', version: '1.2.15') {
        exclude(module: 'mail')
        exclude(module: 'jms')
        exclude(module: 'jmxtools')
        exclude(module: 'jmxri')
        exclude(module: 'activation')
    }
    compile 'com.googlecode.json-simple:json-simple:1.1.1'
	// https://mvnrepository.com/artifact/edu.umass.cs.benchlab/harlib
	compile group: 'edu.umass.cs.benchlab', name: 'harlib', version: '1.1.2'
	// https://mvnrepository.com/artifact/net.sf.json-lib/json-lib
	compile 'net.sf.json-lib:json-lib:2.4:jdk15'

    testCompile group: 'junit', name: 'junit', version: '4.10'
	testCompile "com.google.inject:guice:3.0"
    testCompile "info.cukes:cucumber-java:1.1.3"
    testCompile "info.cukes:cucumber-guice:1.1.3"
    testCompile "info.cukes:cucumber-junit:1.1.3"
}

test {
    jvmArgs "-Xmx512m", "-XX:MaxPermSize=128m", "-Dtest.env=test" //"-Dwebdriver=phantomjs",

    include "**"

    testLogging {
        exceptionFormat "full"
        events "started", "passed", "skipped", "failed", "standardOut", "standardError"
        stackTraceFilters 'groovy', 'entry_point', 'truncate'
        showStandardStreams = true
    }
	//debug true // TODO: MAKE THIS WORK MORE GENERICALLY!
	//mainClassName = "nz.landcare.portals2.SiteLoadsScenario"
}